[package]
name = "tunasync-monitor"
version = "0.1.0"
authors = ["Jiajie Chen <noc@jiegec.ac.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.10.8"
serde = "1.0.115"
serde_json = "1.0.57"

[dev-dependencies]
colored = "1.9"
elasticsearch = "7.6.0-alpha.1"
structopt = { version = "0.3.9", features = [] }
tokio = { version = "0.2", features = ["full"] }

[[example]]
name = "cli"
path = "src/examples/cli.rs"
