[package]
name = "tunasync-monitor"
version = "0.1.0"
authors = ["Jiajie Chen <noc@jiegec.ac.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.10"
serde = "1.0.137"
serde_json = "1.0.81"

[dev-dependencies]
colored = "2.0.0"
elasticsearch = "7.14.0-alpha.1"
structopt = { version = "0.3.26", features = [] }
tokio = { version = "1.19.2", features = ["full"] }

[[example]]
name = "cli"
path = "src/examples/cli.rs"
